--- a/RssReader/Base.lproj/Main.storyboard
+++ b/RssReader/Base.lproj/Main.storyboard
@@ -46,38 +46,38 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトルタイトルタイトルタイトル" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yQq-nm-qqe">
-                                            <rect key="frame" x="0.0" y="0.0" width="269" height="30"/>
+                                            <rect key="frame" x="16" y="0.0" width="253" height="30"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="30" id="WZt-Ij-HS2"/>
+                                                <constraint firstAttribute="height" constant="30" id="KbG-Pj-Hdc"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ここに内容が入ります。" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="66j-Af-G5p">
-                                            <rect key="frame" x="0.0" y="30" width="269" height="60"/>
+                                            <rect key="frame" x="16" y="30" width="253" height="49"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FgN-sO-Nda">
-                                            <rect key="frame" x="286" y="0.0" width="90" height="90"/>
+                                            <rect key="frame" x="286" y="5" width="81" height="79"/>
                                             <constraints>
-                                                <constraint firstAttribute="width" constant="90" id="Tva-Vx-ogp"/>
+                                                <constraint firstAttribute="width" constant="81" id="JfI-2O-HW1"/>
                                             </constraints>
                                         </imageView>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="trailingMargin" secondItem="FgN-sO-Nda" secondAttribute="trailing" constant="-17" id="GMq-R7-RuE"/>
-                                        <constraint firstItem="yQq-nm-qqe" firstAttribute="trailing" secondItem="66j-Af-G5p" secondAttribute="trailing" id="L43-iM-l8y"/>
-                                        <constraint firstItem="66j-Af-G5p" firstAttribute="top" secondItem="yQq-nm-qqe" secondAttribute="bottom" id="NJT-2e-YCZ"/>
-                                        <constraint firstItem="66j-Af-G5p" firstAttribute="bottom" secondItem="FgN-sO-Nda" secondAttribute="bottom" id="TLq-rw-3WE"/>
-                                        <constraint firstItem="yQq-nm-qqe" firstAttribute="top" secondItem="vbj-F5-Ijj" secondAttribute="top" id="UeH-bb-VEN"/>
-                                        <constraint firstItem="FgN-sO-Nda" firstAttribute="leading" secondItem="yQq-nm-qqe" secondAttribute="trailing" constant="17" id="fms-M6-Zpz"/>
-                                        <constraint firstItem="FgN-sO-Nda" firstAttribute="centerY" secondItem="vbj-F5-Ijj" secondAttribute="centerY" id="goH-jE-NtE"/>
-                                        <constraint firstItem="yQq-nm-qqe" firstAttribute="leading" secondItem="66j-Af-G5p" secondAttribute="leading" id="j3V-Sc-gT7"/>
-                                        <constraint firstItem="yQq-nm-qqe" firstAttribute="leading" secondItem="vbj-F5-Ijj" secondAttribute="leading" id="odE-PM-cLS"/>
-                                        <constraint firstItem="yQq-nm-qqe" firstAttribute="top" secondItem="FgN-sO-Nda" secondAttribute="top" id="uch-Ac-efh"/>
+                                        <constraint firstItem="yQq-nm-qqe" firstAttribute="trailing" secondItem="66j-Af-G5p" secondAttribute="trailing" id="6yo-8r-ity"/>
+                                        <constraint firstItem="66j-Af-G5p" firstAttribute="top" secondItem="yQq-nm-qqe" secondAttribute="bottom" id="7Zs-Oi-shL"/>
+                                        <constraint firstItem="yQq-nm-qqe" firstAttribute="top" secondItem="vbj-F5-Ijj" secondAttribute="top" id="DAi-S2-lm9"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="FgN-sO-Nda" secondAttribute="trailing" constant="-8" id="P0v-LG-YUy"/>
+                                        <constraint firstItem="FgN-sO-Nda" firstAttribute="centerY" secondItem="vbj-F5-Ijj" secondAttribute="centerY" id="Pdj-0K-gZq"/>
+                                        <constraint firstItem="FgN-sO-Nda" firstAttribute="top" secondItem="vbj-F5-Ijj" secondAttribute="topMargin" constant="-6" id="Tux-1c-HPR"/>
+                                        <constraint firstItem="yQq-nm-qqe" firstAttribute="leading" secondItem="vbj-F5-Ijj" secondAttribute="leadingMargin" id="TxW-3d-ycP"/>
+                                        <constraint firstItem="yQq-nm-qqe" firstAttribute="leading" secondItem="66j-Af-G5p" secondAttribute="leading" id="c5y-A5-JwQ"/>
+                                        <constraint firstItem="66j-Af-G5p" firstAttribute="bottom" secondItem="vbj-F5-Ijj" secondAttribute="bottomMargin" id="dWO-gW-2hH"/>
+                                        <constraint firstItem="FgN-sO-Nda" firstAttribute="leading" secondItem="yQq-nm-qqe" secondAttribute="trailing" constant="17" id="h7V-Sf-TcS"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
@@ -227,6 +227,6 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="cir-SP-1kr"/>
+        <segue reference="BOH-7H-DSD"/>
     </inferredMetricsTieBreakers>
 </document>
